fixed footer position on mobile devices

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -56,6 +56,7 @@ footer {
 	position: fixed;
 	bottom: 0;
 	z-index: 100;
+	-webkit-backface-visibility: hidden;
 }
 
 footer #footer-resources {
@@ -102,5 +103,6 @@ footer #footer-resources i {
 
 @media ( max-width : 480px) {
 	footer {
+		
 	}
 }
