--- a/web/css/app_part_4_my-style_1.css
+++ b/web/css/app_part_4_my-style_1.css
@@ -34,6 +34,7 @@ footer {
 	position: fixed;
 	bottom: 0;
 	z-index: 100;
+	-webkit-backface-visibility: hidden;
 }
 
 footer #footer-resources {
@@ -80,5 +81,6 @@ footer #footer-resources i {
 
 @media ( max-width : 480px) {
 	footer {
+		
 	}
 }
